Solved Issues with compilation and Fixed SecurityReport method with boolean attribute. Trying something different with Patch method, need to test if it works everything different to jet and celebrities.