@@ -1,12 +1,11 @@
 package com.elitewings_api.services;
 
-import com.elitewings_api.dtos.SecurityreportDto;
-import com.elitewings_api.entities.Flight;
-import com.elitewings_api.entities.Securityreport;
-import com.elitewings_api.exceptions.FlightNotFoundException;
+import com.elitewings_api.dtos.SecurityReportDto;
+import com.elitewings_api.entities.SecurityReport;
 import com.elitewings_api.exceptions.SecurityReportNotFoundException;
 import com.elitewings_api.repositories.FlightRepository;
 import com.elitewings_api.repositories.SecurityreportRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -19,6 +18,7 @@ public class SecurityReportService {
     private final SecurityreportRepository securityReportRepository;
     private final FlightRepository flightRepository;
 
+    @Autowired
     public SecurityReportService(SecurityreportRepository securityReportRepository,
                                  FlightRepository flightRepository) {
         this.securityReportRepository = securityReportRepository;
@@ -26,42 +26,41 @@ public class SecurityReportService {
     }
 
     // POST
-    public SecurityreportDto fileReport(SecurityreportDto dto) {
-        Securityreport report = new Securityreport();
-        report.setId(UUID.randomUUID());
+    public SecurityReportDto fileReport(SecurityReportDto dto) {
+        SecurityReport newreport = new SecurityReport();
+        newreport.setId(UUID.randomUUID());
 
-        Flight flight = flightRepository.findById(UUID.fromString(String.valueOf(dto.getFlight())))
-                .orElseThrow(()-> new FlightNotFoundException("Flight not found"));
-        report.setFlight(flight);
+        newreport.setFlight(flightRepository.findFlightById(UUID.fromString(dto.getFlight())));
+        newreport.setReportedBy(dto.getReportedBy());
+        newreport.setDescription(dto.getDescription());
+        newreport.setIsResolved(false);
 
-        report.setReportedBy(dto.getReportedBy());
-        report.setDescription(dto.getDescription());
-        report.setIsResolved(false);
-
-        Securityreport saved = securityReportRepository.save(report);
+        SecurityReport saved = securityReportRepository.save(newreport);
         return convertToDto(saved);
     }
 
     // GET
-    public List<SecurityreportDto> getUnresolvedReports() {
-        List<Securityreport> unresolved = securityReportRepository.findByIsResolvedFalse(true);
+    public List<SecurityReportDto> getUnresolvedReports() {
+        List<SecurityReport> unresolved = securityReportRepository.findAll().stream().filter(res -> !res.getIsResolved()).toList();
+
         return unresolved.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // PATCH
-    public SecurityreportDto resolveReport(UUID id) {
-        Securityreport report = securityReportRepository.findById(id)
-                .orElseThrow(() -> new SecurityReportNotFoundException("Report not found"));
-        report.setIsResolved(true);
+    public SecurityReportDto resolveReport(UUID id, SecurityReportDto updateReport) {
+        SecurityReport report = securityReportRepository.findById(id)
+                .orElseThrow(() -> new SecurityReportNotFoundException("Report"+ id +"not found"));
 
-        Securityreport updated = securityReportRepository.save(report);
+        report.setIsResolved(true);
+        SecurityReport updated = securityReportRepository.save(report);
         return convertToDto(updated);
     }
 
-    private SecurityreportDto convertToDto(Securityreport report) {
-        SecurityreportDto dto = new SecurityreportDto();
+    private SecurityReportDto convertToDto(SecurityReport report) {
+        SecurityReportDto dto = new SecurityReportDto();
+        dto.setFlight(report.getFlight().getId().toString());
         dto.setReportedBy(report.getReportedBy());
         dto.setDescription(report.getDescription());
         dto.setIsResolved(report.getIsResolved());
